DevOps/Labs/argocd-k3d/manifests/anythingllm/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: anythingllm
spec:
  ingressClassName: traefik
  rules:
    - host: anythingllm.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: anythingllm
                port:
                  number: 3001
